restart callable from scheduler job, watchdog job wip, docker commands logged on debug level